--- a/Frontend/ContactList.WebApp/src/app/app.component.html
+++ b/Frontend/ContactList.WebApp/src/app/app.component.html
@@ -1,24 +1,34 @@
-﻿<h1 id="tableLabel">Weather forecast</h1>
+<div class="container mt-3">
+  <h1 id="tableLabel">Contacts</h1>
 
-<p>This component demonstrates fetching data from the server.</p>
+  <p>This component demonstrates fetching data from the server.</p>
 
-<p *ngIf="!forecasts"><em>Loading... Please refresh once the ASP.NET backend has started. See <a href="https://aka.ms/jspsintegrationangular">https://aka.ms/jspsintegrationangular</a> for more details.</em></p>
+  <p *ngIf="!contacts"><em>Loading... Please refresh once the ASP.NET backend has started. See <a href="https://aka.ms/jspsintegrationangular">https://aka.ms/jspsintegrationangular</a> for more details.</em></p>
 
-<table *ngIf="forecasts">
+  <table class="table table-striped table-hover" *ngIf="contacts">
     <thead>
-        <tr>
-            <th>Date</th>
-            <th>Temp. (C)</th>
-            <th>Temp. (F)</th>
-            <th>Summary</th>
-        </tr>
+      <tr>
+        <th>#</th>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Phone</th>
+        <th>Actions</th>
+      </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let forecast of forecasts">
-            <td>{{ forecast.date }}</td>
-            <td>{{ forecast.temperatureC }}</td>
-            <td>{{ forecast.temperatureF }}</td>
-            <td>{{ forecast.summary }}</td>
-        </tr>
+      <tr *ngFor="let contact of contacts">
+        <td>{{ contact.id }}</td>
+        <td>{{ contact.name }}</td>
+        <td>{{ contact.email }}</td>
+        <td>{{ contact.phone }}</td>
+        <td>
+          <a href="">Edit</a>&nbsp;
+          <a href="">Details</a>&nbsp;
+          <a href="">Delete</a>&nbsp;
+        </td>
+      </tr>
     </tbody>
-</table>
+  </table>
+</div>
+
+
