--- a/Frontend/ContactList.WebApp/src/app/app.component.html
+++ b/Frontend/ContactList.WebApp/src/app/app.component.html
@@ -31,4 +31,19 @@
   </table>
 </div>
 
-<app-contact-form></app-contact-form>
+<!-- modal create -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <app-contact-form></app-contact-form>
+      </div>
+    </div>
+  </div>
+</div>
+
+
