update error handler

--- a/Frontend/ContactList.WebApp/src/app/components/contact-edit-modal/contact-edit-modal.component.html
+++ b/Frontend/ContactList.WebApp/src/app/components/contact-edit-modal/contact-edit-modal.component.html
@@ -4,8 +4,7 @@
   </button>
 </div>
 <div class="modal-body">
-  <label>Id:</label>
-  <input [(ngModel)]="contact.id" class="form-control" />
+  <input [(ngModel)]="contact.id" class="form-control" hidden="hidden"/>
 
   <label>Name:</label>
   <input [(ngModel)]="contact.name" class="form-control" />
